find the pinned virtual thread